src/pages/project/project.less
@import '../../styles.less';

.projectpage-container {
    .s-title {
        margin-top: @component-spacing-large;
        font-size: @fontsize-phone-small;
        color: @text-02;
        margin-bottom: 10px;
    }

    .title {
        font-size: @fontsize-phone-medium;
        color: @text-01;
        margin-bottom: 15px;
    }

    .description1 {
        font-size: @fontsize-phone-small;
        color: @text-02;
        line-height: 2;
        margin-bottom: 5px;
    }

    .description2 {
        font-size: @fontsize-phone-small;
        color: @text-02;
        line-height: 2;
        margin-bottom: 30px;
    }

    .box-container {
        padding-top: 5px;
        font-size: @fontsize-phone-small;
    }

    .skills-container {
        display: flex;
        flex-direction: row;
        margin-bottom: 10px;
        margin-top: -5px;
    }

    .tech {
        font-size: @fontsize-phone-small;
        color: @text-02;
        display: flex;
        align-items: center;
        padding-right: 35px;
    }

    .bubbles-container {
        display: flex;
        justify-content: flex-end;
        margin-left: auto;
        flex-direction: row;
        flex-wrap: wrap;
        gap: 10px;
    }

    .green-bubble {
        font-size: @fontsize-phone-xsmall;
        padding: 3px;
        padding-left: 5px;
        padding-right: 5px;
        border-radius: 4px;
        border-width: 1px;
        color: @text-02;
        border-color: @text-02;
        border-style: solid;
        border-width: 1px;
        background-color: none;
    }

    .block-title {
        font-size: @fontsize-phone-small;
        color: @text-02;
        display: flex;
        align-items: center;
    }

    .block-info {
        font-size: @fontsize-phone-small;
        color: @text-02;
        margin-left: auto;
        justify-content: flex-end;
    }

    .block-container {
        display: flex;
        flex-direction: row;
        margin-bottom: 10px;
        margin-top: -5px;
    }

    .link-a {
        font-size: @fontsize-phone-small;
        color: @text-02;
        text-decoration: none;
        cursor: pointer;
        display: flex;
        flex-direction: row;
        gap: 5px;
    }

    .ri-arrow-right-line {
        margin-top: 1px;
        color: @text-02;
        cursor: pointer;
    }

    .demo {
        position: absolute;
        inset: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 1px;
        opacity: 0;
        transition: opacity 0.2s ease;
    }

    .demo-media-frame {
        position: relative;
        width: 100%;
        aspect-ratio: 16 / 9;
        margin-top: 30px;
        border-radius: 1px;
        overflow: hidden;
        background-color: white;
    }

    .demo-image-frame {
        position: relative;
        width: 100%;
        aspect-ratio: 16 / 9;
        margin-top: 15px;
        border-radius: 1px;
        overflow: hidden;
        background-color: white;
    }

    .media-placeholder {
        position: absolute;
        inset: 0;
        background-color: white;
        z-index: 2;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .loading-spinner {
        width: 32px;
        height: 32px;
        border: 4px dotted #111111;
        border-radius: 50%;
        display: inline-block;
        position: relative;
        box-sizing: border-box;
        animation: rotation 1.2s linear infinite;
        background-color: white;
    }

    .demo-image-container {
        margin-bottom: 30px;
        border-radius: 1px;
    }

    .project-media-container>.demo-image-container:first-child .demo-image-frame:first-child {
        margin-top: 30px;
    }

    .demo-image {
        position: absolute;
        inset: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 1px;
        opacity: 0;
        transition: opacity 0.2s ease;
    }

    .demo.is-loaded,
    .demo-image.is-loaded {
        opacity: 1;
    }
}

@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

